Fix spacing in filters

--- a/resources/assets/css/vedst.css
+++ b/resources/assets/css/vedst.css
@@ -602,4 +602,5 @@ a.event-name{
 .label-filters{
     cursor: pointer;
     user-select: none;
+	margin-right: 4px;
 }
